objects/Opportunity_Fund__c/Opportunity_Fund__c.object-meta.xml
<CustomObject>
    <description>WAMCRM : Junction object between Opportunity and Funds</description>
    <label>Opportunity Fund</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opportunity Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>