objects/Opportunity_Fund__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <description>WAMCRM : Master Detail to Fund object</description>
    <label>Fund</label>
    <referenceTo>WAM_Fund__c</referenceTo>
    <relationshipLabel>Opportunity Funds</relationshipLabel>
    <relationshipName>Opportunity_Funds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>