objects/Opportunity_Fund__c/fields/Record_Detail__c.field-meta.xml
<CustomField>
    <fullName>Record_Detail__c</fullName>
    <formula>HYPERLINK("/" &amp;Id, "View", "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Detail</label>
    <type>Text</type>
</CustomField>